--- a/manuscrit_G_LEFEBVRE/chap_analyse_heterogeneite.tex
+++ b/manuscrit_G_LEFEBVRE/chap_analyse_heterogeneite.tex
@@ -100,7 +100,7 @@ Pour les histogrammes numériques, seule une image est reconstruite par la simul
 \subfloat[Jour 493]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2009_09_25_scan_contour.png}}&
 \subfloat[Jour 535]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2009_11_06_scan_contour.png}}&
 \subfloat[Jour 611]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2010_01_21_scan_contour.png}}&
-\subfloat[Jour 688]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2010_04_08_scan_contour.png}}& 
+\subfloat[Jour 688]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2010_04_08_scan_contour.png}}&
 \subfloat[Jour 776]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2010_07_05__slice-263_20_scan_contour.png}}\\
 \subfloat[Jour 867]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2010_10_04__slice-239_40_scan_contour.png}}&
 \subfloat[Jour 888]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2010_10_25__slice-246_60_scan_contour.png}}&
@@ -112,6 +112,7 @@ Pour les histogrammes numériques, seule une image est reconstruite par la simul
 \subfloat[Jour 1179]{\includegraphics[width=\largeurfignber]{dcm_img/Nber_2011_08_12_scan_contour.png}}
 \end{tabular}
 \caption{\label{fig:contourageNber} Contourage manuel de la tumeur de \Nber. }
+\todo[inline]{Indicateur pour presenter l'echelle sur chaque scan ?}
 \end{figure}
 
 %\begin{figure}
@@ -173,10 +174,9 @@ Pour les histogrammes numériques, seule une image est reconstruite par la simul
 \subfloat[Jour 1161]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2010_07_27_scan_contour.png}}&
 \subfloat[Jour 1224]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2010_09_28_scan_contour.png}}&
 \subfloat[Jour 1296]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2010_12_09_scan_contour.png}}
-\end{tabular}
-\begin{tabular}{cccc}
-\subfloat[Jour 1377]{
-\hspace{.5\largeurfignber}\includegraphics[width=\largeurfignber]{dcm_img/Chen_2011_02_28_scan_contour.png}}& 
+\end{tabular}\\
+\begin{tabular}{p{.5\largeurfignber}cccc}
+& \subfloat[Jour 1377]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2011_02_28_scan_contour.png}}& 
 \subfloat[Jour 1415]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2011_04_07_scan_contour.png}}&
 \subfloat[Jour 1458]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2011_05_20_scan_contour.png}}& 
 \subfloat[Jour 1510]{\includegraphics[width=\largeurfignber]{dcm_img/Chen_2011_07_11_scan_contour.png}}
